# FactorizationCircuit

./: Cargo.toml  README.md
src/: LinearEquationCircuit.rs  discritelog.rs  lib.rs  main.rs  semiprime.rs  semiprime.txt
src/sudoko/: mod.rs  sudoko.rs
